replication/sutra-replication-package/sdk/sutra-compiler/tests/corpus/invalid/07_public_private_conflict.su
// Expected error: AKA0112 - a declaration cannot be both public and private.

public private function vector Bad(vector a) {
    return a;
}
